Resolves: tdf#98297 exclude error values from COUNT in array/matrix

Change-Id: I202dcc2a2b90ee8ed27815b97a2aad6e4df2f1b9
(cherry picked from commit b2f5336b08b5f638f890a626eb2aeefaf499a79b)
Reviewed-on: https://gerrit.libreoffice.org/22843
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>